[package]
name = "slurm-emu-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#path = "src/main.rs"
#name = "slurm_emu_desktop"

[dependencies.slurm_emulator]
path = "../"

[dependencies]
piston_window = "0.123.0"
image = "0.24.1"
fps_counter = "2.0.0"
